# Apple-photo-to-UltraHDR-motion-photo

./: .gitignore  Cargo.toml  Dockerfile  README-prebuilt.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
examples/: aa-photo-bridge.rs  main.rs  simple.rs
notes/: exif.md  libultrahdr.md
scripts/: ghw-build.sh  linux-build-ffmpeg.sh  linux-build-libde265.sh  linux-build-libffmpeg.sh  linux-build-libheif.sh  linux-build-libjpeg.sh  linux-build-libuhdr.sh  mac-build.sh  mac-install-nasm.sh  postprocess-set-file-times.py  preprocess-fix-rotations.py  windows-build.ps1
src/: lib.rs
src/i2a/: convert.rs  exiftool.config  merge.rs  mod.rs  utils.rs  video.rs
src/utils/: exiftool.rs  mod.rs
tests/: IMG_3853.HEIC  IMG_3853.MOV  convert-aac-audio.rs  convert-video-stream.rs  merge.rs
