[package]
name = "motion"
version = "0.1.0"
edition = "2021"

[[example]]
path = "examples/simple.rs"
name = "simple"

[[example]]
path = "examples/main.rs"
name = "main"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.95"
tracing = "0.1.41"
tempfile = "3.15.0"
libheif-rs = "1.1.0"
libultrahdr-rs = "0.1.0"
turbojpeg = { version = "1.2.1", default-features = false }
turbojpeg-sys = { version = "1", default-features = false }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
clap = { version = "4.5.26", features = ["derive"] }
indicatif = "0.17.9"
tracing-indicatif = "0.3.9"
